k8s/test_chart.yaml
---
# Source: bank/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    
    helm.sh/chart: bank-0.2.0
    app.kubernetes.io/name: bank
    app.kubernetes.io/instance: bank
    app: bank
    bank: omegabank
    env: prd
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
---
# Source: bank/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank
  namespace: default
  labels:
    
    helm.sh/chart: bank-0.2.0
    app.kubernetes.io/name: bank
    app.kubernetes.io/instance: bank
    app: bank
    bank: omegabank
    env: prd
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      
      helm.sh/chart: bank-0.2.0
      app.kubernetes.io/name: bank
      app.kubernetes.io/instance: bank
      app: bank
      bank: omegabank
      env: prd
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/managed-by: Helm
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        
        helm.sh/chart: bank-0.2.0
        app.kubernetes.io/name: bank
        app.kubernetes.io/instance: bank
        app: bank
        bank: omegabank
        env: prd
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.2
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx
        - name: bank
          image: lowkent2me/bank:latest
      #        env:
      #        - name: PG_DATABASE
      #          value: bank
      #        - name: PG_USER
      #          valueFrom:
      #            secretKeyRef:
      #              key: username
      #              name: omega-db-creds
      #        - name: PG_PASSWORD
      #          valueFrom:
      #            secretKeyRef:
      #              key: password
      #              name: omega-db-creds
      #        - name: PG_HOST
      #          value: rds-omega-tf.c0whq4jiugzq.eu-north-1.rds.amazonaws.com
      #        - name: PG_PORT
      #          value: "5432"
      volumes:
        - configMap:
            name: -nginx-config
          name: nginx-config
---
# Source: bank/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bank
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: omegabank.smodata.net
      http:
        paths:
          - path: /bank(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank-svc
                port:
                  number: 80
  tls:
    - hosts:
        - omegabank.smodata.net
      secretName: omega-tls
